--- a/css/style.css
+++ b/css/style.css
@@ -32,22 +32,10 @@ html, body{
     height: 100vh;    
 }
 
-.wrap{    
+.wrap{
+    position: relative;    
     width: 100%;
     margin: 0 auto;    
-}
-
-@media (max-width: 1320px) {
-    .wrap{
-       padding: 0 5% 0 5%;
-    }    
-}
-
-
-@media (min-width: 1201px) {
-    .wrap{
-       width: 1200px;
-    }    
 }
 
 a {
@@ -68,6 +56,7 @@ a {
     background-color: #D5D5D5;
     background: url(../img/banner_big.jpg) center;
     background-repeat: no-repeat;
+    background-size: cover; 
     display: flex;
     align-items: center;    
 }
@@ -79,6 +68,7 @@ a {
     line-height: 24px;    
 }
 .links{
+    position: relative;
     margin-top: 150px;
     display: flex;
     justify-content: space-between;
@@ -98,4 +88,92 @@ a {
 opacity: 0.8;
 background-color: black;
 border: 1px solid black;
+}
+
+
+@media (max-width: 1320px) {
+    .wrap{
+       padding: 0 5% 0 5%;
+    }    
+}
+
+
+@media (min-width: 1201px) {
+    .wrap{
+       width: 1200px;
+    }    
+}
+
+
+@media (max-width: 900px) {
+
+    .title{
+        position: relative;
+        width: 350px;        
+        text-align: left;
+        font-size: 46px;
+        font-weight: bolder;
+        line-height: 50px;  
+    }
+
+    .subtitle{
+        position: relative;
+        width: 280px;        
+        margin-top: 20px;
+        font-size: 18px;
+        line-height: 24px;  
+    }
+
+}
+
+@media (max-width: 750px) {
+    .banner{        
+        height: 200px;          
+    }
+    .title{
+        top:200px;
+        font-size: 28px;
+        line-height: 30px;
+    }
+
+    .subtitle{
+        top:200px;
+        font-size: 14px;
+        line-height: 18px;
+    }
+    .links{
+        top:100px;
+    }
+    .wrap{
+        max-width: 600px;
+    }
+}    
+
+@media (max-width: 580px) {
+
+    .title{
+        top:200px;
+        font-size: 28px;
+        line-height: 30px;
+        margin: 0 auto 20px auto;
+        text-align: center;
+    }
+
+    .subtitle{
+        top:200px;
+        font-size: 14px;
+        line-height: 18px;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .links{
+        top:50px;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .link{
+        margin-bottom: 50px;
+    }
 }
