--- a/css/style.css
+++ b/css/style.css
@@ -168,12 +168,23 @@ border: 1px solid black;
     }
 
     .links{
-        top:50px;
+        margin: 100px auto 0px auto;
+        width: 300px;
+        
         flex-direction: column;
         align-items: center;
     }
 
     .link{
         margin-bottom: 50px;
+    }
+}
+
+@media (max-width: 400px) {
+    body{
+        width: 340px;
+    }
+    .title{
+        width: 200px;
     }
 }
