--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@
     font-family: "Roboto-Regular";
 }
 html, body{
+    position: relative;
     margin: 0;
     padding: 0;
 }
@@ -86,109 +87,125 @@ a {
 
 .link_img:hover{
 opacity: 0.8;
-background-color: black;
-border: 1px solid black;
+border-radius: 10px;
+box-shadow: 0 0 10px rgb(95, 95, 95);
 }
 
 
-@media (max-width: 1320px) {
-    .wrap{
-       padding: 0 5% 0 5%;
-    }    
+
+/************************Contacts**********************/
+.form_title{    
+    text-align: left;
+    font-size: 28px;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+.contacts{
+    position: relative;
+    max-width: 1200px;
+    margin: 50px auto 50px auto;
+    display: flex;
+
 }
 
 
-@media (min-width: 1201px) {
-    .wrap{
-       width: 1200px;
-    }    
+.form_wrap{
+    width: 50%;
+    padding: 20px;
+    text-align: center;
+    border:1px solid rgb(207, 207, 207);
+    border-radius: 5px;
+}
+
+.form_wrap:hover{
+    box-shadow: 0 0 10px rgb(207, 207, 207);
 }
 
 
-@media (max-width: 900px) {
-
-    .title{
-        position: relative;
-        width: 350px;        
-        text-align: left;
-        font-size: 46px;
-        font-weight: bolder;
-        line-height: 50px;  
-    }
-
-    .subtitle{
-        position: relative;
-        width: 280px;        
-        margin-top: 20px;
-        font-size: 18px;
-        line-height: 24px;  
-    }
-
+.form{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
-@media (max-width: 750px) {
-    .banner{        
-        height: 200px;          
-    }
-    .title{
-        top:200px;
-        font-size: 28px;
-        line-height: 30px;
-    }
-
-    .subtitle{
-        top:200px;
-        font-size: 14px;
-        line-height: 18px;
-    }
-    .links{
-        top:100px;
-    }
-    .wrap{
-        max-width: 600px;
-    }
-}    
-
-@media (max-width: 580px) {
-
-    .title{
-        top:200px;
-        font-size: 28px;
-        line-height: 30px;
-        margin: 0 auto 20px auto;
-        text-align: center;
-    }
-
-    .subtitle{
-        top:200px;
-        font-size: 14px;
-        line-height: 18px;
-        margin: 0 auto;
-        text-align: center;
-    }
-
-    .links{
-        margin: 100px auto 0px auto;
-        width: 300px;
-        
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .link{
-        margin-bottom: 50px;
-    }
+.form_item{
+    height: 40px;
+    border-radius: 5px;
+    margin-bottom: 30px;
+    font-size: 18px;
+    padding-left: 5px;
+    border: 1px solid rgb(207, 207, 207);
+    
 }
 
-@media (max-width: 400px) {
-    body{
-        min-width: 300px;
-    }
-    .wrap{
-        width: 300px;
-        padding: 0;
-    }
-    .title{
-        width: 200px;
-    }
+.form_item_big{
+    width: 100%;
+}
+
+.form_item_small{
+    width: 45%;
+}
+
+.form_area{
+    border-radius: 5px;
+    margin-bottom: 30px;
+    font-size: 18px;
+    padding-left: 5px;
+    border: 1px solid rgb(207, 207, 207);
+    
+}
+
+.form_submit {
+    width: 130px;
+    height: 40px;
+    background-color:#0069D9;
+    color:#fff;
+    font-size: 14px;
+}
+
+.form_submit:hover{
+    box-shadow: 0 0 3px rgb(95, 95, 95);
+    cursor: pointer;
+}
+
+
+.info_wrap{
+    width: 50%;
+    padding: 20px;   
+}
+
+.info_wrap a{
+    text-decoration: underline;
+    color: blue;
+}
+
+.info_title{
+    text-align: left;
+    font-size: 28px;
+    font-weight: 600;
+    margin-bottom: 20px;    
+}
+.info_second_title{
+    margin-top: 20px;
+}
+
+.info_subtitle{
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+.info_text{
+    margin-bottom: 5px;
+}
+
+.back{
+    position: relative;
+    display: block;
+    width: 110px;
+    height: 40px;
+    margin: 0 auto;
+    font-weight: 600;
+
 }
