--- a/css/media.css
+++ b/css/media.css
@@ -61,7 +61,7 @@
         line-height: 18px;
     }
     .links{
-        top:100px;
+        top:130px;
     }
     .wrap{
         max-width: 600px;
@@ -86,6 +86,9 @@
         top:150px;
     }
 
+    .footer{
+        top:80px;
+    }
 
 }    
 
