--- a/css/media.css
+++ b/css/media.css
@@ -38,6 +38,12 @@
         line-height: 24px;  
     }
 
+    .footer{
+        position: relative;
+    }
+    .content{
+        width: inherit;
+    }
 }
 
 
