--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ box-shadow: 0 0 10px rgb(95, 95, 95);
     padding:20px 0 20px 0;
     text-align: center;
     border-top:1px solid rgb(95, 95, 95);
+    font-size: 12px;
 }
 
 /************************Contacts**********************/
