--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,8 @@ a {
 
 .godlike{
     padding:10px;
-    font-size: 12px;
-    text-align: center;
+    font-size: 18px;
+    text-align:justify;
 }
 
 .title{
@@ -105,7 +105,6 @@ box-shadow: 0 0 10px rgb(95, 95, 95);
     padding:20px 0 20px 0;
     text-align: center;
     border-top:1px solid rgb(95, 95, 95);
-    font-size: 12px;
 }
 
 /************************Contacts**********************/
