--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,7 @@ html, body{
     padding: 0;
 }
 
-.content{
-    position: relative;
-    height: 100vh;
-}
+
 
 .wrap{
     position: relative;    
@@ -98,10 +95,18 @@ box-shadow: 0 0 10px rgb(95, 95, 95);
 }
 
 .footer{
-    width: 100%;
-    position: absolute;
-    margin-top: 80px;
-    bottom: 0;
+    position: relative;
+    width: 100%;    
+    margin-top: 50px;   
+    padding:20px 0 20px 0;
+    text-align: center;
+    border-top:1px solid rgb(95, 95, 95);
+}
+
+.footer_contacts{
+    position: relative;
+    width: 100%;    
+    margin-top: 50px;   
     padding:20px 0 20px 0;
     text-align: center;
     border-top:1px solid rgb(95, 95, 95);
