--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,21 @@
 
+@media (min-height: 800px) and (min-width: 580px)  {
+    .footer{
+        position: absolute;
+        bottom: 0;
+       
+    }
+    .content{        
+        position: relative;
+        height: 100vh;
+    }    
+}
+
+
+
+
+
+
 
 
 @media (max-width: 1320px) {
@@ -16,24 +33,7 @@
     }      
 }
 
-@media (min-width: 1390px) {
-    .footer{
-        position: absolute;
-        bottom: 0;
-       
-    }
-    .content{        
-        position: relative;
-        height: 100vh;
-    }
-    .content_contacts{
-        position: relative;
-    }
-    .footer_contacts{
-        position: absolute;
-        bottom: -50px;
-    }
-}
+
 
 /*************************900***************************/
 
@@ -106,9 +106,13 @@
         top:150px;
     }
 
-    .footer{
+    /*.footer{
         top:150px;
-    }
+    }*/
+
+    .footer_contacts{
+        top:150px;
+    }*
 
 }    
 
@@ -158,7 +162,9 @@
         width: 90%;
     }
 
-
+    .footer_wrap{
+        padding-bottom: 20px;
+    }
 
 
 
@@ -182,5 +188,8 @@
     }
     .title{
         width: 200px;
+    }
+    .footer_wrap{
+        padding-bottom: 20px;
     }
 }
