--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,8 @@ a {
     padding:10px;
     font-size: 18px;
     text-align:justify;
+    font-style: italic;
+    line-height: 22px;
 }
 
 .title{
@@ -94,6 +96,8 @@ border-radius: 10px;
 box-shadow: 0 0 10px rgb(95, 95, 95);
 }
 
+
+
 .footer{
     position: relative;
     width: 100%;    
@@ -105,12 +109,24 @@ box-shadow: 0 0 10px rgb(95, 95, 95);
 
 .footer_contacts{
     position: relative;
-    width: 100%;    
-    margin-top: 50px;   
+    width: 100%; 
+    height: 59px;
     padding:20px 0 20px 0;
     text-align: center;
     border-top:1px solid rgb(95, 95, 95);
 }
+
+
+.back{
+    position: relative;
+    display: block;   
+    width: 110px;
+    height: 40px;
+    margin: 0 auto;
+    font-weight: 600;
+
+}
+
 
 /************************Contacts**********************/
 .form_title{    
@@ -219,12 +235,3 @@ box-shadow: 0 0 10px rgb(95, 95, 95);
     margin-bottom: 5px;
 }
 
-.back{
-    position: relative;
-    display: block;
-    width: 110px;
-    height: 40px;
-    margin: 0 auto;
-    font-weight: 600;
-
-}
