--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ a {
     width: 100%;
     height: 400px;
     background-color: #D5D5D5;
-    background: url(../img/banner_big.jpg) center;
+    background: url(../img/banner_big_2.png) center;
     background-repeat: no-repeat;
     background-size: cover; 
     display: flex;
