--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,7 @@ box-shadow: 0 0 10px rgb(95, 95, 95);
     height: 40px;
     margin: 0 auto;
     font-weight: 600;
+    text-align: center;
 
 }
 
