--- a/css/media.css
+++ b/css/media.css
@@ -13,11 +13,6 @@
 
 
 
-
-
-
-
-
 @media (max-width: 1320px) {
     .wrap{
        padding: 0 5% 0 5%;
@@ -42,8 +37,8 @@
 
     .title{
         position: relative;
-        width: 350px;        
-        text-align: left;
+        /*width: 350px;*/        
+        text-align: right;
         font-size: 46px;
         font-weight: bolder;
         line-height: 50px;  
@@ -51,7 +46,8 @@
 
     .subtitle{
         position: relative;
-        width: 280px;        
+        /*width: 280px;*/
+        text-align: right;        
         margin-top: 20px;
         font-size: 18px;
         line-height: 24px;  
@@ -65,7 +61,7 @@
 /*************************750***************************/
 
 
-@media (max-width: 750px) {
+@media (max-width: 850px) {
     .banner{        
         height: 200px;          
     }
@@ -73,12 +69,14 @@
         top:200px;
         font-size: 28px;
         line-height: 30px;
+        text-align: center;
     }
 
     .subtitle{
         top:200px;
         font-size: 14px;
         line-height: 18px;
+        text-align: center;
     }
     .links{
         top:130px;
