--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ a {
 }
 
 .title{
-    text-align: left;
+    text-align: right;
     font-size: 46px;
     font-weight: bolder;
     line-height: 50px;  
@@ -60,7 +60,7 @@ a {
     width: 100%;
     height: 400px;
     background-color: #D5D5D5;
-    background: url(../img/banner_big_2.png) center;
+    background: url(../img/banner.png) center;
     background-repeat: no-repeat;
     background-size: cover; 
     display: flex;
@@ -68,7 +68,8 @@ a {
 }
 
 .subtitle{
-    width: 280px;
+    /*width: 280px;*/
+    text-align: right;
     margin-top: 20px;
     font-size: 18px;
     line-height: 24px;    
